@@ -5,6 +5,9 @@ Version 6.0.0-RC.11
 ======================================================================================================================
 AllOverIt
   * Added support for ExcludeWhen() to ObjectMapper
+  * Updated ObjectMapper to default to creating empty collections when the source is null (instead of assigning null).
+    This can be changed via the default options (PropertyMatcherOptions).
+
 
 AllOverIt.Pagination
   * Renamed the exposed query provided to the paginator as BaseQuery so it isn't confused with the resultant paginated
